Fixing weird spacing on the typewriter on smaller screens

--- a/client/index.css
+++ b/client/index.css
@@ -129,10 +129,8 @@ header {
     padding: 0 5rem 0 5rem;
 }
 
-.introHeader {
-    padding: 5;
-    display: flex;
-    align-items: center;
+#introHeader {
+    padding: 2rem;
 }
 
 @keyframes blink {
